fixed some linking issues

--- a/contactus.html
+++ b/contactus.html
@@ -14,7 +14,7 @@
     <!-- nav bar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-light py-3" id="navbar">
       <div class="container-xl">
-        <a href="/index.html" class="navbar-barand text-decoration-none">
+        <a href="./index.html" class="navbar-barand text-decoration-none">
           <img src="./assets/img/logo.png" alt="fkexiata" />
         </a>
         <!-- toggle button for mobile nav -->
@@ -36,7 +36,7 @@
         >
           <ul class="navbar-nav menu">
             <li class="nav-item px-4">
-              <a href="/index.html" class="nav-link text-dark fw-bold"> Home </a>
+              <a href="./index.html" class="nav-link text-dark fw-bold"> Home </a>
             </li>
             <li class="nav-item px-4">
               <a href="./services.html" class="nav-link text-dark fw-bold">Services</a>
@@ -72,32 +72,33 @@
               Us
             </h5>
           </div>
-          <h2 class="text-altlight fw-bold mb-4">
-            Find the Perfect Solution for Your Business
-          </h2>
-          <p class="lh-lg w-75">
-            Give us a shout using the form below or any other contact methods to get your IT needs sorted!
-          </p>
-          <div class="row contactwidth-csoz mb-4">
-            <div class="d-flex mb-3">
-                <i class="bi bi-telephone-fill fs-5"></i>
-                <div class="border-bottom ms-3 py-1 flex-fill">
-                    <h6 class="fw-bold text-start">(+61) 3 9119 3003 / <span class="d-inline-block">(+94)76 836 8277</span> </h6>
-                </div>
-            </div>
-            <div class="d-flex mb-3">
-                <i class="bi bi-envelope-fill fs-5"></i>
-                <div class="border-bottom ms-3 flex-fill">
-                    <h6 class="fw-bold py-1 text-start">hello@flexiata.com.au</h6>
-                </div>
-            </div>
-            <div class="d-flex mb-3">
-                <i class="bi bi-geo-alt-fill fs-5"></i>
-                <div class="d-block d-sm-flex ps-3 flex-fill flex-wrap flex-sm-nowrap">
-                    <h6 class="pe-sm-5 sla-csoz text-start"><span class="fw-bold d-block">Sri Lanka Office:</span>Kottawa Sri Lanka</h6>
-                    <h6 class="text-start"><span class="fw-bold d-block text-start">Australia Office:</span>Vermont South VIC 3133</h6>
-                </div>
-            </div>
+
+            <h2 class="text-altlight fw-bold mb-4">
+              Find the Perfect Solution for Your Business
+            </h2>
+            <p class="lh-lg w-75">
+              Give us a shout using the form below or any other contact methods to get your IT needs sorted!
+            </p>
+            <div class="row contactwidth-csoz mb-4">
+              <div class="d-flex mb-3">
+                  <i class="bi bi-telephone-fill fs-5"></i>
+                  <div class="border-bottom ms-3 py-1 flex-fill">
+                      <h6 class="fw-bold text-start">(+61) 3 9119 3003 / <span class="d-inline-block">(+94)76 836 8277</span> </h6>
+                  </div>
+              </div>
+              <div class="d-flex mb-3">
+                  <i class="bi bi-envelope-fill fs-5"></i>
+                  <div class="border-bottom ms-3 flex-fill">
+                      <h6 class="fw-bold py-1 text-start">hello@flexiata.com.au</h6>
+                  </div>
+              </div>
+              <div class="d-flex mb-3">
+                  <i class="bi bi-geo-alt-fill fs-5"></i>
+                  <div class="d-block d-sm-flex ps-3 flex-fill flex-wrap flex-sm-nowrap">
+                      <h6 class="pe-sm-5 sla-csoz text-start"><span class="fw-bold d-block">Sri Lanka Office:</span>Kottawa Sri Lanka</h6>
+                      <h6 class="text-start"><span class="fw-bold d-block text-start">Australia Office:</span>Vermont South VIC 3133</h6>
+                  </div>
+              </div>
           </div>
           <div class="row">
             <div class="col">
