--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
       id="navbar"
     >
       <div class="container-xl">
-        <a href="/index.html" class="navbar-barand text-decoration-none">
+        <a href="./index.html" class="navbar-barand text-decoration-none">
           <img src="./assets/img/logo.png" alt="fkexiata" />
         </a>
         <!-- toggle button for mobile nav -->
