--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- nav bar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-light py-3" id="navbar">
       <div class="container-xl">
-        <a href="/index.html" class="navbar-barand text-decoration-none">
+        <a href="./index.html" class="navbar-barand text-decoration-none">
           <img src="./assets/img/logo.png" alt="fkexiata" />
         </a>
         <!-- toggle button for mobile nav -->
@@ -36,7 +36,7 @@
         >
           <ul class="navbar-nav menu">
             <li class="nav-item px-4">
-              <a href="/index.html" class="nav-link active text-dark fw-bold"> Home </a>
+              <a href="./index.html" class="nav-link active text-dark fw-bold"> Home </a>
             </li>
             <li class="nav-item px-4">
               <a href="./services.html" class="nav-link text-dark fw-bold">Services</a>
@@ -71,21 +71,21 @@
               To Flexiata
             </h5>
           </div>
-          <h1>
-            A Place <span>Where Your <br /></span>
-            <span>IDEAS</span> <span class="sptext-csoz">GROW</span> 
-          </h1>
-          <p class="lh-lg w-50">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam
-          </p>
-          <button
-            type="button"
-            class="btn btn-primary text-light fw-bold px-5 py-3"
-          >
-            CONTACT US
-          </button>
+            <h1>
+              A Place <span>Where Your <br /></span>
+              <span>IDEAS</span> <span class="sptext-csoz">GROW</span> 
+            </h1>
+            <p class="lh-lg w-50">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+              ad minim veniam
+            </p>
+            <button
+              type="button"
+              class="btn btn-primary text-light fw-bold px-5 py-3"
+            >
+              CONTACT US
+            </button>
         </div>
         <div
           class="heroimge-csoz col-4 justify-content-end d-none d-lg-flex ps-0"
