added background image for portfolio

--- a/contactus.html
+++ b/contactus.html
@@ -63,7 +63,7 @@
       >
       <div class="row h-100">
         <div
-          class="col-lg-6 herocol-csoz d-flex flex-column justify-content-center align-items-lg-start align-items-center text-center text-lg-start pe-sm-0 pb-3"
+          class="col-lg-6 herocol-csoz d-flex flex-column justify-content-center align-items-lg-start align-items-center text-center text-lg-start pe-sm-0 pb-4"
           style="z-index: 2"
         >
           <div class="werow-csoz d-flex mb-4">
@@ -76,7 +76,7 @@
             <h2 class="text-altlight fw-bold mb-4">
               Find the Perfect Solution for Your Business
             </h2>
-            <p class="lh-lg w-75">
+            <p class="w-75">
               Give us a shout using the form below or any other contact methods to get your IT needs sorted!
             </p>
             <div class="row contactwidth-csoz mb-4">
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div
-          class="herocol-csoz col-lg-6 justify-content-center justify-content-lg-end d-flex align-items-center ps-0 pb-3"
+          class="herocol-csoz col-lg-6 justify-content-center justify-content-lg-end d-flex align-items-center ps-0 pb-5 pb-lg-4"
         >
         <div class="bg-light rounded form-csoz">
             <div class=" pt-5">
