--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
     <!-- hero section -->
     <section class="bg-secondary d-flex justify-content-center">
       <div
-        class="hero-csoz container-xl justify-content-center position-relative d-flex flex-column justify-content-between pb-3 overflow-hidden"
+        class="hero-csoz heroport-csoz container-xl justify-content-center position-relative d-flex flex-column justify-content-between pb-3 overflow-hidden"
       >
         <div
           class="herocol-csoz d-flex flex-column justify-content-center align-items-md-start align-items-center text-center text-md-start pe-sm-0 position-relative"
@@ -87,7 +87,7 @@
             <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">Portfolio</h5>
           </div>
           <h3 class="text-altlight fw-bold">Our Case Studies</h3>
-          <p class="lh-base w-75">
+          <p class="lh-base w-50">
             View some of our work and case studies for clients. From startups to
             global brands we help organisations. Create products people love to
             use.
@@ -97,7 +97,7 @@
     </section>
 
     <section class="bg-secondary">
-      <div class="container-xl">
+      <div class="container-xl pb-5">
         <nav>
           <div
             class="nav nav-pills border-bottom pb-2"
