added background image to about

--- a/aboutus.html
+++ b/aboutus.html
@@ -67,33 +67,38 @@
     <!-- hero section -->
     <section class=" bg-secondary d-flex justify-content-center overflow-hidden">
         <div
-          class="hero-csoz container-xl  min-vh-100 justify-content-center position-relative"
+          class="hero-csoz abbg-csoz container-xl  min-vh-100 justify-content-center position-relative"
+        >
+        <div
+        class="herocol-csoz d-flex flex-column justify-content-center align-items-md-start align-items-center text-center text-md-start pe-sm-0 position-relative"
+        style="z-index: 2"
         >
         <div class="row h-100">
-          <div
-            class="col-lg-7 herocol-csoz d-flex flex-column justify-content-center align-items-lg-start align-items-center text-center text-lg-start pe-sm-0 pt-2 order-2 order-lg-1"
-            style="z-index: 2"
-          >
-            <div class="werow-csoz my-5 d-flex">
-              <h5 class="fw-bold fs-6 text-uppercase">ABOUT &nbsp;</h5>
-              <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
-                US
-              </h5>
-            </div>
-            <h2 class="text-altlight fw-bold mb-4">Our Story</h2>
-            <p class="lh-lg">
-              Flexiata stands out as a young, dynamic group of IT professionals who understand what the digital era and digital transformation in the modern world is. This team is led by a group of highly skilled professionals with over 15 years of industry experience based in Australia. They were able to nurture a team of highly capable software professionals with time. Formed in 2017, we have attracted a champion team with diverse tech and business backgrounds, with experience in numerous domains.
-            </p>
-            <p class="lh-lg">
-                Our experience ranges all the way from catering to startups businesses and veterans across industry vertices. We have always worked as a strategic tech partner to businesses and individuals who are in need of a tech team. Flexiata functions by having a team dedicated to each step of the process, who eventually works together to deliver robust masterpieces of functional code with initiative designs.
-            </p>
+        <div
+          class="col-lg-7 herocol-csoz d-flex flex-column justify-content-center align-items-lg-start align-items-center text-center text-lg-start pe-sm-0 pt-2 order-2 order-lg-1"
+          style="z-index: 2"
+        >
+          <div class="werow-csoz my-5 d-flex">
+            <h5 class="fw-bold fs-6 text-uppercase">ABOUT &nbsp;</h5>
+            <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
+              US
+            </h5>
           </div>
-          <div
-            class="heroimge-csoz col-lg-5 justify-content-center align-items-center d-flex order-1 order-lg-2 ps-0"
-          >
-          <div>
-              <img src="./assets/img/Final-logo-large.png" alt="flexiata" class="img-fluid">
-          </div>
+          <h2 class="text-altlight fw-bold mb-4">Our Story</h2>
+          <p class="lh-lg">
+            Flexiata stands out as a young, dynamic group of IT professionals who understand what the digital era and digital transformation in the modern world is. This team is led by a group of highly skilled professionals with over 15 years of industry experience based in Australia. They were able to nurture a team of highly capable software professionals with time. Formed in 2017, we have attracted a champion team with diverse tech and business backgrounds, with experience in numerous domains.
+          </p>
+          <p class="lh-lg">
+              Our experience ranges all the way from catering to startups businesses and veterans across industry vertices. We have always worked as a strategic tech partner to businesses and individuals who are in need of a tech team. Flexiata functions by having a team dedicated to each step of the process, who eventually works together to deliver robust masterpieces of functional code with initiative designs.
+          </p>
+        </div>
+        <div
+          class="heroimge-csoz col-lg-5 justify-content-center align-items-center d-flex order-1 order-lg-2 ps-0"
+        >
+        <div>
+            <img src="./assets/img/Final-logo-large.png" alt="flexiata" class="img-fluid">
+        </div>
+      </div>
           </div>
   
         </div>  
