changed mobile nav bar and some styles

--- a/contactus.html
+++ b/contactus.html
@@ -63,7 +63,7 @@
       >
       <div class="row h-100">
         <div
-          class="col-lg-6 herocol-csoz d-flex flex-column justify-content-center align-items-lg-start align-items-center text-center text-lg-start pe-sm-0 pb-4"
+          class="col-lg-6 herocol-csoz d-flex flex-column justify-content-center align-items-start text-start pe-sm-0 pb-4"
           style="z-index: 2"
         >
           <div class="werow-csoz d-flex mb-4">
