--- a/portfolio/webfeont.html
+++ b/portfolio/webfeont.html
@@ -79,7 +79,7 @@
         class="hero-csoz container-xl justify-content-center position-relative d-flex flex-column justify-content-between pb-3 overflow-hidden"
       >
         <div
-          class="herocol-csoz d-flex flex-column justify-content-center align-items-md-start align-items-center text-center text-md-start pe-sm-0 position-relative"
+          class="herocol-csoz d-flex flex-column justify-content-center align-items-start text-start pe-sm-0 position-relative"
           style="z-index: 2"
         >
           <div class="werow-csoz d-flex my-5">
