--- a/aboutus.html
+++ b/aboutus.html
@@ -75,7 +75,7 @@
         >
         <div class="row h-100">
         <div
-          class="col-lg-7 herocol-csoz d-flex flex-column justify-content-center align-items-lg-start align-items-center text-center text-lg-start pe-sm-0 pt-2 order-2 order-lg-1"
+          class="col-lg-7 herocol-csoz d-flex flex-column justify-content-center align-items-start  text-start pe-sm-0 pt-2 order-2 order-lg-1"
           style="z-index: 2"
         >
           <div class="werow-csoz my-5 d-flex">
