--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          menu<i class="bi bi-chevron-compact-right"></i>
         </button>
         <!-- navbar links -->
         <div
-          class="collapse navbar-collapse justify-content-end align-center"
+          class="collapse navbar-collapse navside-csoz justify-content-end align-center"
           id="main-nav"
         >
           <ul class="navbar-nav menu">
@@ -62,7 +62,7 @@
       >
       <div class="row h-100">
         <div
-          class="col-lg-8 herocol-csoz d-flex flex-column justify-content-center align-items-lg-start align-items-center text-center text-lg-start pe-sm-0"
+          class="col-lg-8 herocol-csoz d-flex flex-column justify-content-center align-items-start text-start pe-sm-0"
           style="z-index: 2"
         >
           <div class="werow-csoz d-flex">
@@ -116,11 +116,11 @@
     <!-- client section -->
     <section id="clients">
       <div class="container-xl row m-auto py-5">
-        <div class="col-md col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/slack.png" alt="slack"></div>
-        <div class="col-md col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/amazon.png" alt="amazon"></div>
-        <div class="col-md col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/logitech.png" alt="logitech"></div>
-        <div class="col-md col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/google.png" alt="google"></div>
-        <div class="col-md col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/facebook.png" alt="facebook"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/slack.png" alt="slack"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/amazon.png" alt="amazon"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/logitech.png" alt="logitech"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/google.png" alt="google"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/facebook.png" alt="facebook"></div>
       </div>
     </section>
 
@@ -133,7 +133,7 @@
             SERVICES
           </h5>
         </div>
-        <div class="w-75 content text-center text-sm-start">
+        <div class="w-75 content text-start">
           <h1 class="fw-bold text-altlight">We Provide IT Solutions</h1>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo earum nulla ab cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt. cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt.</p>
         </div>
