changed services page

--- a/services.html
+++ b/services.html
@@ -139,8 +139,8 @@
     </section>
 
     <section class="bg-secondary">
-      <div class="container-xl">
-        <div class="row justify-content-center">
+      <div class="container-xl pt-5">
+        <div class="row justify-content-center bg-light m-0 rounded">
           <div
             class="col-md-5 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
@@ -156,11 +156,9 @@
             </div>
           </div>
           <div
-            class="col-md-7 py-3 py-md-5 ps-md-5 d-flex justify-content-center align-items-center flex-column"
+            class="col-md-7 py-3 py-md-5 px-md-4 d-flex justify-content-center align-items-start flex-column"
           >
-            <h3 class="text-altlight fw-bold mb-5 text-center text-md-start">
-              Cloud Migration
-            </h3>
+            <h3 class="text-altlight fw-bold mb-5 fs-2">Cloud Migration</h3>
             <p class="fw-normal">
               With businesses going global, your system infrastructure is
               expected to fit and match international standards. This is to make
@@ -193,9 +191,9 @@
       </div>
     </section>
 
-    <section class="bg-light position-relative">
-      <div class="container-xl">
-        <div class="row justify-content-center">
+    <section class="position-relative bg-secondary">
+      <div class="container-xl pt-5">
+        <div class="row justify-content-center bg-light rounded m-0">
           <div
             class="col-md-5 order-md-2 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
@@ -211,9 +209,11 @@
             </div>
           </div>
           <div
-            class="col-md-7 order-md-1 py-3 pe-md-5 py-md-5 d-flex justify-content-center align-items-center flex-column"
+            class="col-md-7 order-md-1 py-3 py-md-5 px-md-4 d-flex justify-content-center align-items-start flex-column"
           >
-            <h3 class="text-altlight fw-bold mb-5 text-center text-md-start">
+            <h3
+              class="text-altlight fw-bold mb-5 text-center text-md-start fs-2"
+            >
               Systems Infrastructure
             </h3>
             <p class="fw-normal">
@@ -242,7 +242,7 @@
       </div>
 
       <!-- bottom right boxes -->
-      <div class="position-absolute bottom-0 end-0 bgimg-csoz">
+      <div class="position-absolute end-0 bgimg-csoz">
         <img
           src="./assets/img/testimonials/Group 629.png"
           class="img-fluid"
@@ -251,9 +251,9 @@
       </div>
     </section>
 
-    <section class="bg-secondary contafakebgrg-csoz">
-      <div class="container-xl">
-        <div class="row justify-content-center">
+    <section class="bg-secondary">
+      <div class="container-xl pt-5">
+        <div class="row justify-content-center bg-light rounded m-0">
           <div
             class="col-md-5 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
@@ -269,19 +269,21 @@
             </div>
           </div>
           <div
-            class="col-md-7 py-3 py-md-5 ps-md-5 d-flex justify-content-center align-items-center flex-column bg-condark"
+            class="col-md-7 py-3 py-md-5 px-md-4 d-flex justify-content-center align-items-start flex-column"
           >
-            <h3 class="text-light fw-bold mb-5 text-center text-md-start">
+            <h3
+              class="text-altlight fw-bold mb-5 text-center text-md-start fs-2"
+            >
               Web Development
             </h3>
-            <p class="fw-normal text-light">
+            <p class="fw-normal">
               With businesses going global, your system infrastructure is
               expected to fit and match international standards. This is to make
               sure it is secure, robust, and scalable. It takes a group of
               specialists to maintain this status.
             </p>
 
-            <p class="fw-normal text-light">
+            <p class="fw-normal">
               A systems infrastructure foundation could encapsulate core
               networks, virtual components, software, hardware, databases, data
               warehouses, processes, and procedures. This is an infrastructure
@@ -290,7 +292,7 @@
               infrastructures.
             </p>
 
-            <p class="fw-normal text-light">
+            <p class="fw-normal">
               Setting up a powerful systems infrastructure requires planning a
               steady and dependable execution. In order for your system
               infrastructure solution to be future proof, the infrastructure
@@ -307,8 +309,8 @@
     </section>
 
     <section class="bg-secondary">
-      <div class="container-xl">
-        <div class="row justify-content-center">
+      <div class="container-xl pt-5">
+        <div class="row justify-content-center bg-light rounded m-0">
           <div
             class="col-md-5 order-md-2 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
@@ -324,9 +326,11 @@
             </div>
           </div>
           <div
-            class="col-md-7 order-md-1 py-3 py-md-5 pe-md-5 d-flex justify-content-center align-items-center flex-column"
+            class="col-md-7 order-md-1 py-3 py-md-5 px-md-4 d-flex justify-content-center align-items-start flex-column"
           >
-            <h3 class="text-altlight fw-bold mb-5 text-center text-md-start">
+            <h3
+              class="text-altlight fw-bold mb-5 text-center text-md-start fs-2"
+            >
               Ecommerce Web Applications
             </h3>
             <p class="fw-normal">
@@ -354,7 +358,7 @@
       </div>
     </section>
 
-    <section class="bg-light position-relative">
+    <section class="bg-secondary position-relative">
       <!-- top right boxes -->
       <div class="position-absolute bgtpimg-csoz">
         <img
@@ -364,8 +368,8 @@
         />
       </div>
 
-      <div class="container-xl">
-        <div class="row justify-content-center">
+      <div class="container-xl pt-5">
+        <div class="row justify-content-center bg-light m-0 rounded">
           <div
             class="col-md-5 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
@@ -381,9 +385,11 @@
             </div>
           </div>
           <div
-            class="col-md-7 py-3 py-md-5 ps-md-5 d-flex justify-content-center align-items-center flex-column"
+            class="col-md-7 py-3 py-md-5 px-md-4 d-flex justify-content-center align-items-start flex-column"
           >
-            <h3 class="text-altlight fw-bold mb-5 text-center text-md-start">
+            <h3
+              class="text-altlight fw-bold mb-5 text-center text-md-start fs-2"
+            >
               UI/UX Design
             </h3>
             <p class="fw-normal">
@@ -414,9 +420,9 @@
       </div>
     </section>
 
-    <section class="bg-secondary contafakebg-csoz">
-      <div class="container-xl">
-        <div class="row justify-content-center">
+    <section class="bg-secondary">
+      <div class="container-xl pt-5">
+        <div class="row justify-content-center bg-light m-0 rounded">
           <div
             class="col-md-5 order-md-2 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
@@ -432,18 +438,20 @@
             </div>
           </div>
           <div
-            class="col-md-7 order-md-1 py-3 py-md-5 pe-md-5 d-flex justify-content-center align-items-center flex-column bg-condark"
+            class="col-md-7 order-md-1 py-3 py-md-5 px-md-4 d-flex justify-content-center align-items-start flex-column"
           >
-            <h3 class="text-light fw-bold mb-5 text-center text-md-start">
+            <h3
+              class="text-altlight fw-bold mb-5 text-center text-md-start fs-2"
+            >
               Content Management Systems (CMS)
             </h3>
-            <p class="fw-normal text-light">
+            <p class="fw-normal">
               As the name suggests, a Content Management System enables you to
               easily create, manage, and control the content on your website or
               web application.
             </p>
 
-            <p class="fw-normal text-light">
+            <p class="fw-normal">
               You don’t have to worry about getting a developer to change
               content for you. You can easily do this for yourself with a CMS.
               With our CMS solutions, you will be in charge of your website and
@@ -451,7 +459,7 @@
               a well thought out content strategy.
             </p>
 
-            <p class="fw-normal text-light">
+            <p class="fw-normal">
               Our team will be with you to develop a system that meets your
               requirements a hundred percent. We go that extra mile to ensure
               you have all the control you need. Based on your needs and your
@@ -464,8 +472,8 @@
     </section>
 
     <section class="bg-secondary position-relative">
-      <div class="container-xl">
-        <div class="row justify-content-center">
+      <div class="container-xl pt-5">
+        <div class="row justify-content-center bg-light m-0 rounded">
           <div
             class="col-md-5 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
@@ -481,9 +489,11 @@
             </div>
           </div>
           <div
-            class="col-md-7 py-3 py-md-5 ps-md-5 d-flex justify-content-center align-items-center flex-column"
+            class="col-md-7 py-3 py-md-5 ps-md-5 d-flex justify-content-center align-items-start flex-column"
           >
-            <h3 class="text-altlight fw-bold mb-5 text-center text-md-start">
+            <h3
+              class="text-altlight fw-bold mb-5 text-center text-md-start fs-2"
+            >
               SEO Service
             </h3>
             <p class="fw-normal">
@@ -523,9 +533,9 @@
       </div>
     </section>
 
-    <section class="bg-light">
-      <div class="container-xl">
-        <div class="row justify-content-center">
+    <section class="bg-secondary pb-5">
+      <div class="container-xl py-5">
+        <div class="row justify-content-center bg-light m-0 rounded">
           <div
             class="col-md-5 order-md-2 py-3 py-md-5 px-2 px-md-5 d-flex justify-content-center align-items-center"
           >
@@ -541,9 +551,11 @@
             </div>
           </div>
           <div
-            class="col-md-7 order-md-1 py-3 py-md-5 pe-md-5 d-flex justify-content-center align-items-center flex-column"
+            class="col-md-7 order-md-1 py-3 py-md-5 px-md-5 d-flex justify-content-center align-items-start flex-column"
           >
-            <h3 class="text-altlight fw-bold mb-5 text-center text-md-start">
+            <h3
+              class="text-altlight fw-bold mb-5 text-center text-md-start fs-2"
+            >
               Web Hosting Solutions
             </h3>
             <p class="fw-normal">
