changed about us page services page

--- a/aboutus.html
+++ b/aboutus.html
@@ -65,12 +65,12 @@
     </nav>
 
     <!-- hero section -->
-    <section class=" bg-secondary d-flex justify-content-center overflow-hidden">
+    <section class=" bg-secondary abbg-csoz d-flex justify-content-center overflow-hidden">
         <div
-          class="hero-csoz abbg-csoz container-xl  min-vh-100 justify-content-center position-relative"
+          class="hero-csoz container-xl  min-vh-100 justify-content-center position-relative"
         >
         <div
-        class="herocol-csoz d-flex flex-column justify-content-center align-items-md-start align-items-center text-center text-md-start pe-sm-0 position-relative"
+        class="herocol-csoz d-flex flex-column justify-content-center align-items-md-start align-items-center text-center text-md-start pe-sm-0 position-relative h-100"
         style="z-index: 2"
         >
         <div class="row h-100">
@@ -78,12 +78,6 @@
           class="col-lg-7 herocol-csoz d-flex flex-column justify-content-center align-items-start  text-start pe-sm-0 pt-2 order-2 order-lg-1"
           style="z-index: 2"
         >
-          <div class="werow-csoz my-5 d-flex">
-            <h5 class="fw-bold fs-6 text-uppercase">ABOUT &nbsp;</h5>
-            <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
-              US
-            </h5>
-          </div>
           <h2 class="text-altlight fw-bold mb-4">Our Story</h2>
           <p class="lh-lg">
             Flexiata stands out as a young, dynamic group of IT professionals who understand what the digital era and digital transformation in the modern world is. This team is led by a group of highly skilled professionals with over 15 years of industry experience based in Australia. They were able to nurture a team of highly capable software professionals with time. Formed in 2017, we have attracted a champion team with diverse tech and business backgrounds, with experience in numerous domains.
@@ -131,15 +125,61 @@
         </div>
       </section>
 
+      
       <!-- how we work section -->
-      <section class="bg-secondary position-relative">
+      <section class="bg-light pt-5">
         <div class="container-xl">
             <div class="row py-5">
-                <div class="col-sm-6 col-md-4 d-flex d-md-block align-items-center flex-column">
-                    <h2 class="text-altlight fw-bold">How We Work</h2>
-                    <img src="./assets/img/chooseUs/01.png" class="img-fluid" alt="how we work">
+              <div class="position-relative col-sm-6 col-md-4 d-flex align-items-center justify-content-evenly flex-column">
+                <div class="position-relative">
+                  <h2 class=" fw-bold mb-4">Save Time & Effort With the Flexiata</h2>
+                  <div class="borderc-csoz">
+                    <!-- border -->
+                  </div>
                 </div>
+                <img src="./assets/img/chooseUs/02.png" class="img-fluid" alt="Save Time & Effort">
+              </div>
                 <div class="col-sm-6 col-md-8">
+                    <div class="row">
+                        <div class="mb-4">
+                            <div class="d-flex align-items-center mb-3">
+                                <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                                  <h5 class="fw-bold text-altlight m-0 ms-3">Experienced Staff</h5>
+                              </div>
+                              <p>Flexiata members are from the top IT colleges and software companies in the region and bring valuable real world experience to our team. </p>
+                        </div>
+                        <div class="mb-4">
+                            <div class="d-flex align-items-center mb-3">
+                                <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                                  <h5 class="fw-bold text-altlight m-0 ms-3">Competitive Pricing </h5>
+                              </div>
+                              <p>We at Flexiata will guarantee that the clients will always get more than the money they spend.</p>
+                        </div>
+                        <div class="mb-4">
+                            <div class="d-flex align-items-center mb-3">
+                                <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                                  <h5 class="fw-bold text-altlight m-0 ms-3">Fast Delivery</h5>
+                              </div>
+                              <p>THaving a highly qualified staff on board, makes it easy for us to accommodate the demands of any project you may have while adhering to the strictest time deadlines.</p>
+                        </div>
+                        <div class="mb-4">
+                            <div class="d-flex align-items-center mb-3">
+                                <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                                  <h5 class="fw-bold text-altlight m-0 ms-3">Innovative solutions</h5>
+                              </div>
+                              <p>We pride ourselves on our ability to “think outside the box”. Flexiata implements creative problem solving strategies to eliminate your IT dilemmas.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </section>
+
+      <!-- how we work section -->
+      <section class="bg-light position-relative">
+        <div class="container-xl">
+            <div class="row py-5">
+                <div class="col-sm-6 col-md-8 order-2 order-sm-1">
                     <div class="row">
                         <div class="mb-4">
                             <div class="d-flex align-items-center mb-3">
@@ -171,54 +211,18 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <!-- bottom left image -->
-        <div class="position-absolute bottom-0 left-0 d-none d-md-block">
-            <img src="./assets/img/chooseUs/boxes.png" alt="boxes">
-        </div>
-      </section>
-      <!-- how we work section -->
-      <section class="bg-light">
-        <div class="container-xl">
-            <div class="row py-5">
-                
-                <div class="col-sm-6 col-md-8">
-                    <div class="row">
-                        <h2 class="text-altlight fw-bold mb-4">Save Time & Effort With the Flexiata</h2>
-                        <div class="mb-4">
-                            <div class="d-flex align-items-center mb-3">
-                                <img src="./assets/img/chooseUs/tick.svg" alt="tick">
-                                  <h5 class="fw-bold text-altlight m-0 ms-3">Experienced Staff</h5>
-                              </div>
-                              <p>Flexiata members are from the top IT colleges and software companies in the region and bring valuable real world experience to our team. </p>
-                        </div>
-                        <div class="mb-4">
-                            <div class="d-flex align-items-center mb-3">
-                                <img src="./assets/img/chooseUs/tick.svg" alt="tick">
-                                  <h5 class="fw-bold text-altlight m-0 ms-3">Competitive Pricing </h5>
-                              </div>
-                              <p>We at Flexiata will guarantee that the clients will always get more than the money they spend.</p>
-                        </div>
-                        <div class="mb-4">
-                            <div class="d-flex align-items-center mb-3">
-                                <img src="./assets/img/chooseUs/tick.svg" alt="tick">
-                                  <h5 class="fw-bold text-altlight m-0 ms-3">Fast Delivery</h5>
-                              </div>
-                              <p>THaving a highly qualified staff on board, makes it easy for us to accommodate the demands of any project you may have while adhering to the strictest time deadlines.</p>
-                        </div>
-                        <div class="mb-4">
-                            <div class="d-flex align-items-center mb-3">
-                                <img src="./assets/img/chooseUs/tick.svg" alt="tick">
-                                  <h5 class="fw-bold text-altlight m-0 ms-3">Innovative solutions</h5>
-                              </div>
-                              <p>We pride ourselves on our ability to “think outside the box”. Flexiata implements creative problem solving strategies to eliminate your IT dilemmas.</p>
-                        </div>
+                <div class="col-sm-6 col-md-4 d-flex align-items-start align-items-sm-end justify-content-evenly flex-column order-1 order-sm-2">
+                  <div class="position-relative">
+                    <h2 class="fw-bold text-end">How We Work</h2>
+                    <div class="borderca-csoz d-none d-sm-block">
+                      <!-- border -->
                     </div>
-                </div>
-                <div class="col-sm-6 col-md-4 d-flex justify-content-center align-items-center">
-                    <img src="./assets/img/chooseUs/02.png" class="img-fluid" alt="Save Time & Effort">
-                </div>
+                    <div class="borderc-csoz d-block d-sm-none">
+                      <!-- border -->
+                    </div>
+                  </div>
+                  <img src="./assets/img/chooseUs/01.png" class="img-fluid" alt="how we work">
+              </div>
             </div>
         </div>
       </section>
