--- a/aboutus.html
+++ b/aboutus.html
@@ -30,11 +30,11 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+        menu<i class="bi bi-chevron-compact-right"></i>
         </button>
         <!-- navbar links -->
         <div
-          class="collapse navbar-collapse justify-content-end align-items-center"
+          class="collapse navbar-collapse navside-csoz justify-content-end align-items-center"
           id="main-nav"
         >
           <ul class="navbar-nav menu">
