--- a/contactus.html
+++ b/contactus.html
@@ -27,11 +27,11 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+        menu<i class="bi bi-chevron-compact-right"></i>
         </button>
         <!-- navbar links -->
         <div
-          class="collapse navbar-collapse justify-content-end align-center"
+          class="collapse navbar-collapse navside-csoz justify-content-end align-center"
           id="main-nav"
         >
           <ul class="navbar-nav menu">
