changed upper welcome element margin

--- a/aboutus.html
+++ b/aboutus.html
@@ -75,9 +75,13 @@
         >
         <div class="row h-100">
         <div
-          class="col-lg-7 herocol-csoz d-flex flex-column justify-content-center align-items-start  text-start pe-sm-0 pt-2 order-2 order-lg-1"
+          class="col-lg-7 herocol-csoz d-flex flex-column justify-content-center align-items-start  text-start pe-sm-0 pt-2"
           style="z-index: 2"
         >
+          <div class="werow-csoz d-flex my-5">
+            <h5 class="fw-bold fs-6 text-uppercase">About &nbsp;</h5>
+            <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">Us</h5>
+          </div>
           <h2 class="text-altlight fw-bold mb-4">Our Story</h2>
           <p class="lh-lg">
             Flexiata stands out as a young, dynamic group of IT professionals who understand what the digital era and digital transformation in the modern world is. This team is led by a group of highly skilled professionals with over 15 years of industry experience based in Australia. They were able to nurture a team of highly capable software professionals with time. Formed in 2017, we have attracted a champion team with diverse tech and business backgrounds, with experience in numerous domains.
@@ -87,7 +91,7 @@
           </p>
         </div>
         <div
-          class="heroimge-csoz col-lg-5 justify-content-center align-items-center d-flex order-1 order-lg-2 ps-0"
+          class="heroimge-csoz col-lg-5 justify-content-center align-items-center d-flex ps-lg-0 pb-5 pb-lg-0"
         >
         <div>
             <img src="./assets/img/Final-logo-large.png" alt="flexiata" class="img-fluid">
