--- a/contactus.html
+++ b/contactus.html
@@ -66,7 +66,7 @@
           class="col-lg-6 herocol-csoz d-flex flex-column justify-content-center align-items-start text-start pe-sm-0 pb-4"
           style="z-index: 2"
         >
-          <div class="werow-csoz d-flex mb-4">
+          <div class="werow-csoz d-flex my-5">
             <h5 class="fw-bold fs-6 text-uppercase">Contact &nbsp;</h5>
             <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
               Us
