--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
           class="herocol-csoz rehero-csoz d-flex flex-column justify-content-center align-center text-start pe-sm-0 position-relative"
           style="z-index: 2"
         >
-          <div class="werow-csoz d-flex mb-5">
+          <div class="werow-csoz d-flex my-5">
             <h5 class="fw-bold fs-6 text-uppercase">OUR &nbsp;</h5>
             <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">SERVICES</h5>
           </div>
