--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
     <!-- client section -->
     <section id="clients">
       <div class="container-xl row m-auto py-5">
-        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/slack.png" alt="slack"></div>
-        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/amazon.png" alt="amazon"></div>
-        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/logitech.png" alt="logitech"></div>
-        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/google.png" alt="google"></div>
-        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0"><img src="./assets/img/company/facebook.png" alt="facebook"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0"><img src="./assets/img/company/slack.png" alt="slack"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0"><img src="./assets/img/company/amazon.png" alt="amazon"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0"><img src="./assets/img/company/logitech.png" alt="logitech"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0"><img src="./assets/img/company/google.png" alt="google"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0"><img src="./assets/img/company/facebook.png" alt="facebook"></div>
       </div>
     </section>
 
@@ -433,21 +433,21 @@
     <section class="bg-darkblue m-auto overflow-hidden  position-relative" id="counter">
       <div class="container-xl py-5">
         <div class="row text-secondary">
-          <div class="col-sm-3 text-center py-3 p-sm-0 fw-bold">
+          <div class="col-sm-3 text-center py-4 p-sm-0 fw-bold bordebd-csoz">
             <h3 class="fw-bold fs-1 counter" data-target="197">0</h3>
-            <h5  class="fw-normal fs-6">Project Finished</h5>
+            <h5  class="fw-normal fs-5">Project Finished</h5>
           </div>
-          <div class="col-sm-3 text-center py-3 p-sm-0">
+          <div class="col-sm-3 text-center py-4 p-sm-0 bordebd-csoz">
             <h3 class="fw-bold fs-1 counter plus" data-target="18">0</h3>
-            <h5 class="fw-normal fs-6">Year Experience</h5>
+            <h5 class="fw-normal fs-5">Year Experience</h5>
           </div>
-          <div class="col-sm-3 text-center py-3 p-sm-0">
+          <div class="col-sm-3 text-center py-4 p-sm-0 bordebd-csoz">
             <h3 class="fw-bold fs-1 counter plus" data-target="230">0</h3>
-            <h5 class="fw-normal fs-6">Happy Customers</h5>
+            <h5 class="fw-normal fs-5">Happy Customers</h5>
           </div>
-          <div class="col-sm-3 text-center py-3 p-sm-0">
+          <div class="col-sm-3 text-center py-4 p-sm-0 bordebd-csoz">
             <h3 class="fw-bold fs-1 counter" data-target="1087">0</h3>
-            <h5 class="fw-normal fs-6">Recognition</h5>
+            <h5 class="fw-normal fs-5">Recognition</h5>
           </div>
         </div>
 
