changed hero image in mobile and about us page section padding

--- a/aboutus.html
+++ b/aboutus.html
@@ -130,8 +130,8 @@
       </section>
 
       
-      <!-- how we work section -->
-      <section class="bg-light pt-5">
+      <!-- save time and effort -->
+      <section class="bg-secondary pt-5">
         <div class="container-xl">
             <div class="row py-5">
               <div class="position-relative col-sm-6 col-md-4 d-flex align-items-center justify-content-evenly flex-column">
@@ -141,7 +141,7 @@
                     <!-- border -->
                   </div>
                 </div>
-                <img src="./assets/img/chooseUs/02.png" class="img-fluid" alt="Save Time & Effort">
+                <img src="./assets/img/chooseUs/02.png" class="img-fluid py-3" alt="Save Time & Effort">
               </div>
                 <div class="col-sm-6 col-md-8">
                     <div class="row">
@@ -225,7 +225,7 @@
                       <!-- border -->
                     </div>
                   </div>
-                  <img src="./assets/img/chooseUs/01.png" class="img-fluid" alt="how we work">
+                  <img src="./assets/img/chooseUs/01.png" class="img-fluid py-3" alt="how we work">
               </div>
             </div>
         </div>
