--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
       <div class="container-xl pb-5">
         <nav>
           <div
-            class="nav nav-pills border-bottom pb-2"
+            class="nav nav-pills nav-fill border-bottom pb-2"
             id="nav-tab"
             role="tablist"
           >
